<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beacon Logger</string>
    <string name="range_beacons">Range beacons</string>
    <string name="action_settings">Settings</string>
    <string name="venue">Venue</string>
    <string name="cancel">Cancel</string>

    <!--Format strings-->
    <string name="format_connect">Connect %s</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="ok">Ok</string>
    <string name="proximity_uuid">Proximity UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="power_level">Power Level</string>
    <string name="advertising_interval">Advertising Interval</string>
    <string name="set_password">Set password</string>
    <string name="model_name">Model name</string>
    <string name="proximity">Proximity</string>
    <string name="transmission_power">Transmission Power</string>
    <string name="timers">Timers</string>
    <string name="access_control">Access Control</string>
    <string name="battery">Battery</string>
    <string name="battery_level">Battery Level</string>
    <string name="device_information">Device Information</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="hardware_revision">Hardware Revision</string>
    <string name="reset">Reset</string>
    <string name="reset_device">Reset Device</string>
    <string name="restore_default_settings">Restore Default Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profiles">Profiles</string>
    <string name="accept_profile">Accept Profile</string>
    <string name="pending_configs">Pending configurations</string>
    <string name="apply_config">Apply Configuration</string>
    <string name="generate">Generate</string>
    <string name="beacon_unique_id">Beacon Unique Id</string>
    <string name="submit">Submit</string>
    <string name="device_name">Device Name</string>
    <string name="rssi">Rssi</string>
    <string name="power">Power</string>
    <string name="address">MAC address</string>
    <string name="firmware_version">Firmware version</string>
    <string name="unexpected_error_monitoring_start">Unexpected error occured during monitoring start</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="unexpected_error_connection">Unexpected error occured during establishing connection to Beacon Service</string>
    <string name="background_scan">Background Scan</string>
    <string name="scan_stopped">Scan stopped</string>
    <string name="scan_started">Scan started</string>
    <string name="region_entered">%1$s entered</string>
    <string name="region_abandoned">%1$s abandoned</string>
    <string name="beacon_appeared">%1$s appeared</string>
    <string name="appeared_beacon_info">Device found:\n%1$s\nProximityUUID:\n%2$s\nMajor:\n%3$d\nMinor:\n%4$d\nDistance:\n%5$.1f m (%6$s)</string>
    <string name="foreground_background_scan">Foreground/background scan</string>
    <string name="syncing_config">Syncing config…</string>
    <string name="response_status">HttpResponse status: %1$d</string>

    <string name="configuration">Configuration</string>
    <string name="filter">Filter</string>
    <string name="num_samples">Samples to capture:</string>
    <string name="title_activity_directoryexplorer">Directory Explorer</string>
    <string name="action_directoryexplorer">Directory explorer</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
</resources>
