<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:weightSum="8"
              android:animateLayoutChanges="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:minWidth="50dp"
        android:src="@drawable/beacon"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Device Name:"
                android:id="@+id/textView14"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Address:"
                android:id="@+id/textView17"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="address"
                android:id="@+id/address"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Proximity UUID: "
                android:id="@+id/textView15"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/proximity_uuid"
                android:text="@string/proximity_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Major:"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/major"
                android:text="@string/major"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Minor:"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/minor"
                android:text="@string/minor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Beacon Unique id:"
                android:id="@+id/textView13"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/beacon_unique_id"
                android:text="@string/beacon_unique_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Firmware Version:"
                android:id="@+id/textView12"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/firmware_version"
                android:text="@string/firmware_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Accuracy:"
                android:id="@+id/textView16"
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="accuracy"
                android:id="@+id/accuracy"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Proximity: "
                android:id="@+id/textView11"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/proximity"
                android:text="@string/proximity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Power:"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/power"
                android:text="@string/power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Rssi:"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/rssi"
                android:text="@string/rssi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
