<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_weight="2.58">

        <Button
            android:alpha="0.7"
            android:id="@+id/range_beacons"
            android:text="@string/range_beacons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/configuration"
            android:id="@+id/textView2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/num_samples"
                android:id="@+id/textView"
                android:textSize="16dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_max_num_samples"
                android:layout_weight="1"
                android:textSize="16dp"
                android:saveEnabled="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/filter"
            android:id="@+id/textView3"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="by Address:"
                android:id="@+id/textView4"
                android:textSize="16dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_address"
                android:spinnerMode="dropdown"
                android:saveEnabled="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Distance (meters):"
                android:id="@+id/textView6"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:gravity="center_vertical" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numberPicker_distance"
                android:layout_weight="1"
                android:showDividers="none"
                android:saveEnabled="true"/>

        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add distance to filename"
            android:id="@+id/checkBox_distanceonFilename"
            android:checked="false"
            android:saveEnabled="true"
            android:layout_weight="1.27" />

    </LinearLayout>

</LinearLayout>